--- a/contactinfo.html
+++ b/contactinfo.html
@@ -19,10 +19,10 @@
   
     <main>
         <div>
-            Email: <a href="">marissahuysentruyt@gmail.com</a>
+            Email: <a href="">...</a>
         </div>
         <div>
-            Phone Number: 810.479.6180
+            Phone Number:...
         </div>
         <div>
             <form method="POST" action="">
