--- a/github_practice.html
+++ b/github_practice.html
@@ -5,5 +5,6 @@
 </head>
 <body>
   <p>Messing around with github, finishing up an HTML course. Not going to upload it for personal URL</p>
+  <p>Do i have verified commits?</p>
 </body>
 </html>
